--- a/static/styles/scss/module/_variables.scss
+++ b/static/styles/scss/module/_variables.scss
@@ -4,7 +4,7 @@ $green-text: green;
 $navy: #0a192f;
 $lightest-slate: #ccd6f6;
 $slate: #8892b0;
-$green: #64ffda;
+$green: #45d4b3;
 $transition: 0.25s;
 $fz-xs: 13px;
 $fz-xxl: 22px;
